# sds689-final-proj

./: .gitignore  main.py  pyproject.toml
stan/: analyze_old_runs.py  analyze_wandb_arithmetic_runs.py  analyze_wandb_tms_runs.py  kramers.py  tms.py
stan/data/old/: iid-runs-300.pkl  label-noise-runs-500.pkl
