[project]
name = "devinterpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "devinterp>=1.3.2",
    "matplotlib>=3.10.6",
    "moviepy>=2.2.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "weave>=0.52.10",
]
